# wy-tool

./: .gitignore  package-lock.json  top20_customers.html
customer-analyzer/: index.html  package-lock.json  package.json  vite.config.js
customer-analyzer/scripts/: create-icon.js
customer-analyzer/src/: main.js
customer-analyzer/src-tauri/: Cargo.toml  tauri.conf.json
customer-analyzer/src-tauri/capabilities/: default.json
customer-analyzer/src-tauri/icons/: .gitkeep  icon.icns
customer-analyzer/src-tauri/src/: excel_processor.rs  lib.rs  main.rs  monthly_analysis.rs  out_of_policy.rs
customer-analyzer/src/pages/: guarantee.js  home.js  monthly.js  out_of_policy.js  purchase.js  rebate.js  top20.js
customer-analyzer/src/styles/: main.css
